editted job title

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 					</section>
 					<section id="content2">
 						<div class="inner-w3pvt-wrap mt-3">
-							<h4>DevSecOps Engineer (rotation)</h4>
+							<h4>DevSecOps Engineer</h4>
 							<h6>Dec 2022 - Present at Safaricom PLC</h6>
 							<p>• Acted as a Scrum Master for DevSecOps team.</p>
 							<p>• Created pipelines and automatic deployments for various squads.</p>
