ediited the dates

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 						</div>
 						<div class="inner-w3pvt-wrap">
 							<h4>Customer Experience Executive</h4>
-							<h6>Nov 2016 - Present at Safaricom PLC</h6>
+							<h6>Nov 2016 - Oct 2024 at Safaricom PLC</h6>
 							<p>• Currently working in data team for L400 queue calls.</p>
 							<p>• Providing solutions to customers on call by offering First Call Resolutions.</p>
 							<p>• Escalating technical issues beyond scope to the relevant team for faster resolution.</p>
